# flow-gallery

./: .gitignore  LICENSE  README.md  index.html
.github/workflows/: pages.yml
cahn-hilliard/: README.md  index.html
cahn-hilliard/css/: style.css
cahn-hilliard/js/: main.js
cahn-hilliard/python/: cahn_hilliard.py  pyproject.toml
capillary-waves/: README.md  index.html
capillary-waves/js/: main.js
capillary-waves/python/: capillary_waves.py  pyproject.toml
css/: landing.css
dewetting/: README.md  index.html
dewetting/js/: main.js
dewetting/python/: dewetting.py  pyproject.toml
marangoni/: README.md  index.html
marangoni/js/: main.js
marangoni/python/: marangoni.py  pyproject.toml
rayleigh-plateau/: README.md  index.html
rayleigh-plateau/js/: main.js
rayleigh-plateau/python/: pyproject.toml  rayleigh_plateau.py
