[project]
name = "capillary-waves"
version = "0.2.0"
description = "Spectral gravity–capillary surface-wave reference solver and GIF generator for flow-gallery."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "imageio>=2.31",
    "typer>=0.12",
]

# Runnable script project, not an installable package.
[tool.uv]
package = false
