[project]
name = "dewetting"
version = "0.3.0"
description = "Thin-film dewetting lubrication reference solver and GIF generator for flow-gallery."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "imageio>=2.31",
    "typer>=0.12",
]

# Runnable script project, not an installable package.
[tool.uv]
package = false
