[project]
name = "rayleigh-plateau"
version = "0.4.0"
description = "Slender-jet Rayleigh–Plateau reference solver and GIF generator for flow-gallery."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "imageio>=2.31",
    "typer>=0.12",
]

[tool.uv]
package = false
